--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
 
 <form method="post" action="/names">
-	<input type='text' name='p1_name' />
-	<input type='text' name='p2_name' />
+	<input type='text' name='player_1_name' />
+	<input type='text' name='player_2_name' />
 	<input type='submit' value="Submit">
 </form>
-<% if @names %>
-<h1> <%= @names['p1_name']+' vs '+ @names['p2_name'] %></h1>
+<% if @player_1 && @player_2 %>
+<h1> <%= "#{@player_1} vs #{@player_2}" %></h1>
 <% end %>
