--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,13 @@
-
-<form method="post" action="/names">
-	<input type='text' name='player_1_name' />
-	<input type='text' name='player_2_name' />
-	<input type='submit' value="Submit">
+<h1>Battle!</h1>
+<h2>Sign in to play</h2>
+<form action="/names" method="post">
+  <label for="player_1_name">
+    Player 1 name
+    <input type="text" name="player_1_name">
+  </label>
+  <label for="player_2_name">
+    Player 2 name
+    <input type="text" name="player_2_name">
+  </label>
+  <input type="submit" value="Submit">
 </form>
-<% if @player_1 && @player_2 %>
-<h1> <%= "#{@player_1} vs #{@player_2}" %></h1>
-<% end %>
