--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,6 @@
-<h1> <%= "#{@player_1} vs #{@player_2}" %></h1>
+<h1> <%= "#{ @player_1 } vs #{ @player_2 }" %></h1>
+
+<h2><%= @player_2 %> score is 0</h2>
+
+
+
